Updated About page.

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
         {{>header}}
+        <p>This site was created by Kalyani Deshmukh. It uses data from mapbox.com and weatherstack.com. This site gives the location weather details for the entered location.</p>
         <img class="portrait" src="/img/day1.jpeg" >
         </div>
          {{>footer}}
